--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "homepage": "https://github.com/m10rten/i4n#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/m10rten/i4n/"
+  },
+  "bugs": {
+    "url": "https://github.com/m10rten/i4n/issues"
+  },
+  "readme": "",
   "scripts": {
     "build": "tsup --format cjs,esm --dts",
     "lint": "eslint src/**/*.ts",
@@ -85,5 +94,8 @@
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "engines": {
+    "node": ">=20.11.x < 22.x"
   }
 }
