removed comments from output saving 2kb

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "noImplicitAny": true,
     "noUncheckedIndexedAccess": true,
     "allowUnreachableCode": false
+    // "removeComments": true
   },
   "exclude": ["node_modules", "dist"]
 }
