--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     "strictNullChecks": true,
     "noImplicitAny": true,
     "noUncheckedIndexedAccess": true,
-    "allowUnreachableCode": false,
-    "removeComments": true
+    "allowUnreachableCode": false
   },
   "exclude": ["node_modules", "dist"]
 }
