--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "noUncheckedIndexedAccess": true,
     "allowUnreachableCode": false
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "examples"]
 }
