--- a/examples/i4n-lazy/package.json
+++ b/examples/i4n-lazy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i4n-json",
+  "name": "i4n-lazy",
   "version": "1.0.0",
   "description": "",
   "main": "main.ts",
@@ -15,6 +15,6 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "i4n": "^0.4.0"
+    "i4n": "^0.5.0"
   }
 }
